# watchy

./: .gitattributes  .gitignore  CLAUDE.md  README.en.md  README.md  README.zh.md  auto-update.sh  config.example.yaml  config.yaml  positions.example.yaml  project_doc.md  pyproject.toml  requirements.txt  secrets.example.yaml  watchy-update.service  watchy-update.timer  watchy.service
.claude/: settings.json
.claude/memory/: MEMORY.md  ssh-airport-port-block.md  watchy-api-cost-baseline.md  watchy-git-workflow.md  watchy-issue-plan.md  watchy-journald-persistence.md  watchy-memory-sync.md  watchy-pending-enable-tier2-gate.md  watchy-take-profit-gap.md  watchy-tier2-risk-cadence.md  watchy-vps-bugs.md  (+3 more)
docs/: IMPLEMENTATION_PLAN.md
scripts/: calibrate_atr_proximity.py  compare_gemini_models.py  compare_gemini_thinking.py  compare_rm_pm_models.py  docs_reminder.sh  schwab_oauth.py  sync_memory.sh  validate_target_extraction.py  validate_yfc.py
tests/: test_advisor.py  test_daemon.py  test_digest_store.py  test_e2e.py  test_indicators.py  test_locks.py  test_notify.py  test_orchestrator.py  test_pipeline_runner.py  test_positions.py  test_schwab.py  test_schwab_health.py  test_state.py  test_take_profit.py  test_tier1.py  test_tier2.py  test_tier2_gate.py  test_token_tracker.py
watchy/: __init__.py  advisor.py  config.py  daemon.py  digest_store.py  indicators.py  locks.py  market_calendar.py  notify.py  orchestrator.py  pipeline_runner.py  positions.py  proximity.py  schwab.py  schwab_health.py  state.py  take_profit.py  tier1.py  tier2.py  token_tracker.py
(+1 files in other folders)
