[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "watchy"
version = "0.1.0"
description = "Stock monitoring daemon on top of TradingAgents"
requires-python = ">=3.11"
dependencies = [
    "yfinance>=0.2.0",
    "yfinance-cache>=0.8.0",
    "pandas>=2.0",
    "numpy>=1.24",
    "pyyaml>=6.0",
    "apscheduler>=3.10",
    "schwabdev>=3.0.0",
]

[tool.setuptools.packages.find]
where = ["."]
